--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/starboom.png" />
+    <link rel="icon" type="image/svg+xml" href="/SD FashionLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Star Boom</title>
+    <title>SD Fashion</title>
   </head>
   <body>
     <div id="root"></div>
