--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:image" content="/background.jpg">
     <link rel="icon" type="image/svg+xml" href="/SD FashionLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SD Fashion</title>
